# AFEPack

./: AUTHORS  ChangeLog  INSTALL_CN.md  Make.global_options  Make.global_options.in  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libtool  mkinstalldirs
examples/DysonSphere/: Cube.geo  Makefile  Makefile.am  Makefile.in  Makefile.sample  Makefile.sample.in  README  main.cpp  run.sh.sample  showMesh.net
examples/TaiChiYinYang/: D.d  Makefile  Makefile.am  Makefile.in  Makefile.sample  Makefile.sample.in  README  main.cpp  run.sh.sample.in  showMesh.net
examples/local_refine/2d/: 2d.cpp  2d.net  Coarse.d  Makefile  Makefile.am  Makefile.in
examples/moving_mesh/: Makefile  Makefile.am  Makefile.in  burgers.cpp  burgers.h
examples/poisson_equation/: D.d  Makefile  Makefile.am  Makefile.in  Makefile.sample  Makefile.sample.in  README  poisson_equation.cpp  poisson_equation.net  run.sh.sample  run.sh.sample.in
examples/poisson_equation_3D/: Cube.geo  Makefile  Makefile.am  Makefile.in  Makefile.sample  Makefile.sample.in  README  poisson_equation.cpp  poisson_equation.net  run.sh.sample  run.sh.sample.in
examples/step-7/: EllipticSystem.cpp  Makefile  Makefile.am  Makefile.in  Makefile.sample  Show_Solution.net  run.sh.sample  showmesh.m
include/AFEPack/: AMGSolver.h  BilinearOperator.h  BilinearOperator.templates.h  BinaryBuffer.h  BoundaryCondition.h  DBMesh.h  DGFEMSpace.h  DGFEMSpace.templates.h  DenseMatrix.h  DerefIterator.h  EasyMesh.h  EasyMesh.templates.h  FEMSpace.h  FEMSpace.templates.h  FEMSpace.vector_value.templates.h  Functional.h  Functional.templates.h  Geometry.h  Geometry.templates.h  GmshMesh.h  HGeometry.h  HGeometry.templates.h  HGeometry.templates.nd.h  HybridFEMSpace.h  LOBPCG.h  Makefile  Makefile.am  Makefile.in  MatrixBase.h  MemoryReclaimer.h  MemoryReclaimer.templates.h  Migration.details.h  Migration.h  Miscellaneous.h  MovingMesh.h  MovingMesh2D.h  MovingMesh3D.h  MovingMeshFB.h  MovingMeshFB3D.h  Operator.discretize.templates.h  (+18 more)
include/AFEPack/mpi/: MPI.h  MPI_Controller.h  MPI_DOF.h  MPI_DOF.templates.h  MPI_FaceData.h  MPI_HGeometry.h  MPI_HGeometry.templates.h  MPI_HGeometry_archive.h  MPI_LoadBalance.h  MPI_MemoryReclaimer.h  MPI_Migration.h  MPI_PeriodHandler.h  MPI_SyncDOF.h  MPI_SyncProp.h  MPI_UGeometry_archive.h  MPI_ULoadBalance.h  Makefile.am  Makefile.in
include/AFEPack/template/: Makefile  Makefile.am  Makefile.in
src/: AMGSolver.cpp  BilinearOperator.cpp  BoundaryCondition.cpp  DBMesh.cpp  DGFEMSpace.cpp  DenseMatrix.cpp  EasyMesh.cpp  FEMSpace.cpp  FEMSpace.vector_value.1d.cpp  FEMSpace.vector_value.2d.cpp  FEMSpace.vector_value.3d.cpp  Functional.cpp  Geometry.1d.cpp  Geometry.2d.cpp  Geometry.3d.cpp  Geometry.cpp  GmshMesh.cpp  HGeometry.1d.cpp  HGeometry.2d.cpp  HGeometry.3d.cpp  HGeometry.cpptemplate  LOBPCG.cpp  Makefile  Makefile.am  Makefile.in  Migration.cpp  Miscellaneous.cpp  MovingMesh.cpp  MovingMesh2D.cpp  MovingMesh3D.cpp  MovingMeshFB.cpp  MovingMeshFB3D.cpp  Operator.discretize.cpp  Operator.interpolate.cpp  Operator.project.cpp  PropertyTable.cpp  SparseMatrix.cpp  SparseMatrixTool.cpp  SparsityPattern.cpp  TemplateElement.cpp  (+5 more)
src/mpi/: MPI.cpp  MPI_Controller.cpp  MPI_LoadBalance.cpp  MPI_Migration.cpp  Makefile  Makefile.am  Makefile.in
template/: Makefile  Makefile.am  Makefile.bas_fun  Makefile.geometry  Makefile.in
template/four_tetrahedron/: four_tetrahedron.crd_trs  four_tetrahedron.crd_trs.c  four_tetrahedron.out_nrm  four_tetrahedron.out_nrm.c  four_tetrahedron.tmp_geo  four_tetrahedron.volume.c
template/four_tetrahedron/four_tetrahedron.0/: four_tetrahedron.0.bas_fun  four_tetrahedron.0.bas_fun.c
template/four_tetrahedron/four_tetrahedron.1/: four_tetrahedron.1.bas_fun  four_tetrahedron.1.tmp_dof
template/four_tetrahedron/four_tetrahedron.1.D/: four_tetrahedron.1.D.bas_fun
template/hexahedron/: hexahedron.crd_trs  hexahedron.crd_trs.c  hexahedron.out_nrm  hexahedron.out_nrm.c
template/hexahedron/hexahedron.0.D/: hexahedron.0.D.bas_fun  hexahedron.0.D.bas_fun.c  hexahedron.0.D.tmp_dof
template/hexahedron/hexahedron.1.D/: hexahedron.1.D.bas_fun  hexahedron.1.D.bas_fun.c
template/hexahedron/hexahedron.2.D/: hexahedron.2.D.bas_fun
template/interval/: interval.tmp_geo  interval.to2d.crd_trs  interval.to2d.crd_trs.c  interval.volume.c
template/oblong/: oblong.crd_trs  oblong.crd_trs.c  oblong.out_nrm.c  oblong.to3d.crd_trs.c  oblong.volume.c  readme.txt
template/prism/: prism.crd_trs  prism.out_nrm.c
template/pyramid/: pyramid.crd_trs  pyramid.crd_trs.c  pyramid.tmp_geo  pyramid.volume.c
template/quadrilateral/: quadrilateral.crd_trs  quadrilateral.crd_trs.c  quadrilateral.tmp_geo  quadrilateral.to3d.crd_trs  quadrilateral.to3d.crd_trs.c  quadrilateral.volume.c
template/rectangle/: rectangle.crd_trs.c  rectangle.crd_trs.to3d.cpp  rectangle.out_nrm  rectangle.out_nrm.c  rectangle.tmp_geo  rectangle.volume.c
template/recthexa/: recthexa.crd_trs  recthexa.crd_trs.c  recthexa.out_nrm  recthexa.tmp_geo  recthexa.volume.c
template/tetrahedron/: tetrahedron.crd_trs  tetrahedron.crd_trs.c  tetrahedron.out_nrm  tetrahedron.tmp_geo  tetrahedron.volume.c
template/triangle/: triangle.crd_trs  triangle.crd_trs.c  triangle.out_nrm  triangle.tmp_geo  triangle.to3d.crd_trs  triangle.volume.c
template/twin_tetrahedron/: twin_tetrahedron.crd_trs  twin_tetrahedron.crd_trs.c  twin_tetrahedron.out_nrm  twin_tetrahedron.out_nrm.c  twin_tetrahedron.tmp_geo
template/twin_triangle/: twin_triangle.crd_trs  twin_triangle.iso.crd_trs  twin_triangle.iso.crd_trs.c  twin_triangle.out_nrm  twin_triangle.tmp_geo  twin_triangle.to3d.crd_trs  twin_triangle.to3d.crd_trs.c  twin_triangle.volume.c
tools/: 2d_vecfun_dxdata2tecplotdata.cpp  Makefile  Makefile.am  Makefile.in  dbmesh2mesh  dxdata2easymeshdata  dxdata2easymeshdata.cpp  dxdata2tecplotdata  dxdata2tecplotdata.cpp  gmsh2mesh  gmsh2mesh.cpp  gmsh2mesh.sh.in  hsfc_renum.cpp  mesh2opendx.cpp  mesh_refine.cpp  simpmesh2mesh.cpp  tricube.cpp
(+733 files in other folders)
